# PyGit

./: .coverage  .gitignore  CHANGELOG.md  PLAN_PyGit.md  PyGitClone.py  PyGitClone.spec  QUICK_REFERENCE.md  README.md  REPORT-Testing_Infrastructure.md  REPORT-Testing_IntegrationTests.md  REPORT-Testing_PropertyTests.md  REPORT-Testing_UnitTests.md  pygit.py  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
pygit/: __init__.py
pygit/commands/: __init__.py  clone.py  fetch.py  main.py  pull.py  push.py
pygit/core/: __init__.py  config.py  github.py  ignore.py  index.py  objects.py  repository.py
pygit/tests/: __init__.py
pygit/utils/: __init__.py  http.py  logging.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/index/: .gitkeep
tests/fixtures/objects/: .gitkeep
tests/fixtures/repos/: .gitkeep
tests/integration/: __init__.py  test_git_compat.py  test_round_trip.py  test_workflow.py
tests/mocks/: __init__.py  github_mock.py  http_mock.py
tests/performance/: __init__.py
tests/property/: __init__.py  test_index_property.py  test_objects_property.py  test_paths_property.py
tests/unit/: __init__.py
tests/unit/commands/: __init__.py  test_cli.py  test_clone.py  test_fetch.py  test_pull.py  test_push.py
tests/unit/core/: __init__.py  test_config.py  test_ignore.py  test_index.py  test_objects.py  test_repository.py
tests/unit/utils/: __init__.py  test_http.py
