[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygit"
version = "0.0.6"
description = "A pure Python Git implementation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "juren53"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
pygit = "pygit.commands.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "pytest-mock>=3.10.0",
]

# ============================================================================
# pytest configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interaction",
    "property: Property-based tests using Hypothesis",
    "slow: Tests that take a long time to run",
    "network: Tests that require network access",
    "windows: Tests specific to Windows platform",
    "linux: Tests specific to Linux platform",
    "macos: Tests specific to macOS platform",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["pygit"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
